syntax = "proto3";

package com.giyeok.bibix;

import "values.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_outer_classname = "BibixIdProto";

message SourceId {
  oneof source {
    google.protobuf.Empty main_source = 1;
    string preloaded_plugin = 2;
    ExternalBibixProject extern_plugin_objhash = 3;
  }
}

message ExternalBibixProject {
  string root_directory = 1;
  string script_name = 2;
  bytes project_obj_hash = 3;
  int64 version = 4;
}

message TargetIdData {
  SourceId source_id = 1;
  string target_name = 2;
  oneof build_rule {
    string bibix_version = 3;
    bytes output_id = 4;
  }
  ArgsMap args_map = 5;
}

message OutputIdData {
  bytes target_id = 1;
  InputHashes input_hashes = 2;
}

message ObjectIdHash {
  // hash는 object의 내용이 조금이라도 바뀌었으면 바뀌어야 되는 값.
  // root_source나 main_source는 bibix 버전이 들어가면 되려나..?
  oneof hash {
    string root_source = 1;
    string bibix_internal_source = 2;
    bytes object_id_hash_string = 3;
  }
}

message ArgsMap {
  repeated ArgPair pairs = 1;
}

message ArgPair {
  string name = 1;
  BibixValue value = 2;
}

message InputHashes {
  repeated DirectoryHash directories = 1;
  repeated FileHash files = 2;
  repeated string non_existent = 3;
}

// path는 해당 프로젝트의 root script 기준 상대 경로
message DirectoryHash {
  string path = 1;
  repeated DirectoryHash directories = 2;
  repeated FileHash files = 3;
}

message FileHash {
  string path = 1;
  google.protobuf.Timestamp last_modified_time = 2;
  int64 size = 3;
  bytes sha1_hash = 4;
}
